# Files

./: README.md
app/: index.html
app/scripts/: visual-verify.mjs
app/src/app/: App.tsx
app/src/features/browser/: source-browser-index.ts  source-browser.render.test.tsx  source-browser.test.ts  source-browser.tsx
app/src/features/dashboard/: mock.ts
app/src/shared/lib/: tauri.ts  workbench-layout.ts
app/src/shared/types/: api.ts
docs/: ARCHITECTURE.md  LEGAL.md  TESTING.md
legal/: EULA.md  THIRD_PARTY_NOTICES.md
legal/licenses/: MIT.txt
resources/icons/: generate-icons.ps1
resources/installer/: files.manifest  files.rc  release.ps1  smoke-runtime.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rss-carver/: Cargo.toml
src-tauri/crates/rss-carver/src/: lib.rs
src-tauri/crates/rss-case/: Cargo.toml
src-tauri/crates/rss-case/src/: lib.rs
src-tauri/crates/rss-catalog/: Cargo.toml
src-tauri/crates/rss-catalog/src/: lib.rs
src-tauri/crates/rss-core/: Cargo.toml
src-tauri/crates/rss-core/src/: lib.rs
src-tauri/crates/rss-fat/: Cargo.toml
src-tauri/crates/rss-fat/src/: lib.rs
src-tauri/crates/rss-fs/: Cargo.toml
src-tauri/crates/rss-fs/src/: lib.rs
src-tauri/crates/rss-ntfs/: Cargo.toml
src-tauri/crates/rss-ntfs/src/: evidence.rs  lib.rs
src-tauri/crates/rss-recovery/: Cargo.toml
src-tauri/crates/rss-recovery/src/: lib.rs
src-tauri/crates/rss-report/: Cargo.toml
src-tauri/crates/rss-report/src/: lib.rs
src-tauri/crates/rss-scan-audit/: Cargo.toml
src-tauri/crates/rss-scan-audit/src/: main.rs
src-tauri/crates/rss-security/: Cargo.toml
src-tauri/crates/rss-security/src/: lib.rs
src-tauri/crates/rss-ui-bridge/: Cargo.toml
src-tauri/crates/rss-ui-bridge/src/: artifact_intel.rs  lib.rs
src-tauri/crates/rss-windows/: Cargo.toml
src-tauri/crates/rss-windows/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/internal/: scan_audit_program.rs
src-tauri/src/: main.rs
tools/: generate_windows_icon.py
