[package]
name = "files"
default-run = "files"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows-first forensic triage workbench for deleted file discovery and recovery."
build = "build.rs"

[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.8.3"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Jumarf"]

[workspace.dependencies]
aho-corasick = "1"
anyhow = "1"
base64 = "0.22"
blake3 = "1"
cfb = "0.7"
csv = "1"
directories = "6"
fatfs = "0.3"
hex = "0.4"
html-escape = "0.2"
ntfs-reader = "0.4"
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1", features = ["serde", "v7"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_Security_WinTrust",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies]
anyhow = { workspace = true }
rss-core = { path = "crates/rss-core" }
rss-fs = { path = "crates/rss-fs" }
rss-report = { path = "crates/rss-report" }
rss-security = { path = "crates/rss-security" }
rss-ui-bridge = { path = "crates/rss-ui-bridge" }
rss-windows = { path = "crates/rss-windows" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[[bin]]
name = "files"
path = "src/main.rs"
test = false

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
