[package]
name = "rss-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
sanitize-filename = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rss-core = { path = "../rss-core" }
rss-windows = { path = "../rss-windows" }
