[package]
name = "rss-scan-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Internal deleted-file audit runner for Files."

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
rss-core = { path = "../rss-core" }
rss-fs = { path = "../rss-fs" }
rss-ntfs = { path = "../rss-ntfs" }
rss-report = { path = "../rss-report" }
rss-security = { path = "../rss-security" }
rss-windows = { path = "../rss-windows" }
sanitize-filename = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "scan_audit"
path = "src/main.rs"
