[package]
name = "rss-ui-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cfb = { workspace = true }
chardetng = "0.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
rss-case = { path = "../rss-case" }
rss-catalog = { path = "../rss-catalog" }
rss-core = { path = "../rss-core" }
rss-fs = { path = "../rss-fs" }
rss-recovery = { path = "../rss-recovery" }
rss-report = { path = "../rss-report" }
rss-security = { path = "../rss-security" }
rss-windows = { path = "../rss-windows" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }
