[package]
name = "rss-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
ntfs-reader = { workspace = true }
rss-core = { path = "../rss-core" }
rss-security = { path = "../rss-security" }
time = { workspace = true }
windows = { workspace = true }
